# megadvc

./: Cargo.toml  LICENSE  flake.nix
src/: add.rs  init.rs  lib.rs  lock.rs  main.rs  megacmd.rs  options.rs  remove.rs  status.rs
