[package]
name = "megadvc"
version = "0.1.0"
edition = "2021"
author = "Thomas Wehmöller <contact.mordrag+megadvz@gmail.com>"
about = "Push and pull data from mega.nz similar to git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = [ "derive" ] }
toml = "0.5"
log = "0.4"
env_logger = "0.9"
serde = "1.0"
serde_derive = "1.0"
blake3 = "1.3"
thiserror = "1.0"
walkdir = "2.3"
console = "0.15"